tests/positive/rule4_linked_list_sum.safe
-- Test: rule4_linked_list_sum
-- Description: Linked-list prefix accumulation with null-guarded dereferences.
--   The sample performs arithmetic on both a visit count and node values
--   across a bounded prefix of a linked structure.
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.8.4.p136:fa5e94b7
-- Clause: SAFE@468cf72:spec/02-restrictions.md#2.3.2.p96a:0eaf48aa
-- Expected: ACCEPT

package safe_linked_list_sum

   type node;
   type node_ptr is access node;
   type visit_count is range 0 to 3;
   type node_value is range 0 to 100;
   type total_value is range 0 to 300;

   type node is record
      value : node_value;
      Next  : node_ptr;


   function summarize_prefix (Head : node_ptr) returns total_value
      count : visit_count = 0;
      total : total_value = 0;

      if Head != null
         count = count + 1;
         total = total + total_value (Head.value);
         if count == 3
            return total_value (total);


         if Head.Next != null
            var Second : access constant node = Head.Next.access;
            count = count + 1;
            total = total + total_value (Second.value);
            if count == 3
               return total_value (total);


            if Second.Next != null
               var Third : access constant node = Second.Next.access;
               count = count + 1;
               total = total + total_value (Third.value);
               if count == 3
                  return total_value (total);



      return total_value (total);


